--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1010,4 +1010,7 @@ source "sound/soc/codecs/sdm660_cdc/Kconfig"
 source "sound/soc/codecs/msm_sdw/Kconfig"
 source "sound/soc/codecs/dbmdx/Kconfig"
 
+config SOUND_CONTROL
+	bool "Sound Control for msm89xx"
+
 endmenu
