--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
           no_output_timeout: 50m
           command: |
            apt-get -y update && apt-get -y upgrade && DEBIAN_FRONTEND=noninteractive apt-get -y install bc build-essential bison flex zip gcc clang libc6 curl libstdc++6 git wget libssl-dev zstd openjdk-11-jdk openjdk-11-jre && apt-get -y install python
-           git clone https://github.com/PREDATOR-project/Xiaomi_kernel_platina.git --depth=1 kernel
+           git clone https://github.com/PREDATOR-project/Xiaomi_kernel_platina.git kernel
            cd kernel
            git clone https://github.com/PREDATOR-project/myscripts.git -b master
-           chmod +x myscripts/stable-setup.sh
+           chmod +x myscripts/setup-test.sh
            chmod +x myscripts/platina.sh
-           source ./myscripts/stable-setup.sh
+           source ./myscripts/setup-test.sh
            ./myscripts/platina.sh
 workflows:
   version: 2.1
