--- a/arch/arm64/configs/platina_user_defconfig
+++ b/arch/arm64/configs/platina_user_defconfig
@@ -69,6 +69,8 @@ CONFIG_HZ_300=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
+CONFIG_ZPOOL=y
+CONFIG_Z3FOLD=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -255,6 +257,8 @@ CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_DMA_CMA=y
 # CONFIG_PNP_DEBUG_MESSAGES is not set
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEFAULT_Z3FOLD=y
+CONFIG_ZRAM_DEFAULT_POOL="z3fold"
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
